# manp-movie-maker

./: .gitignore  CMakeLists.txt  ManpMovieMaker.sln  ManpMovieMaker.vcxproj  README.md  vcpkg.json
JPEGLib/: BUILD_NOTES.md  CMakeLists.txt  JPEGLIB.vcxproj  JPEGLIB.vcxproj.filters
ZLib/: CMakeLists.txt  ZLib.vcxproj
docs/: AnimationTheory.md  CMakeBuildNotes.md  CreateFFmpegScript.md  CreatingAnimationsInManpWIN.md  FFmpegInstallation.md  GettingStarted.md  ManpMovieMaker Modernisation.docx  ManpMovieMakerModernisation.md  PrepareFrames.md  PrepareSourceImages.md
pngLib/: CMakeLists.txt  PNGLib.vcxproj
src/: Dib.cpp  Dib.h  DibMacro.h  Jpgview.c  ManpMovieMaker.cpp  ManpMovieMaker.rc  Nextfile.cpp  PNG.cpp  Resize.cpp  Screen.h  crop.cpp  crop.h  resource.h  view.h
